<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewmodel"
            type="com.example.coinswatchermvvm.ui.settings.SettingsViewModel"/>
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.settings.SettingsFragment">

    <TextView
        android:id="@+id/textView_settings_min_period"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/settingsFragment_min_request_period" />

    <RadioGroup
        android:id="@+id/settings_radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/radioButton_1min"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="@{() -> viewmodel.onBtnRadio0Clicked()}"
            android:text="@string/settingsFragment_btn_1min_period" />

        <RadioButton
            android:id="@+id/radioButton_15min"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="@{() -> viewmodel.onBtnRadio1Clicked()}"
            android:text="@string/settingsFragment_btn_15min_period" />

        <RadioButton
            android:id="@+id/radioButton_30min"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="@{() -> viewmodel.onBtnRadio2Clicked()}"
            android:text="@string/settingsFragment_btn_30min_period" />

        <RadioButton
            android:id="@+id/radioButton_60min"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="@{() -> viewmodel.onBtnRadio3Clicked()}"
            android:text="@string/settingsFragment_btn_60min_period" />
    </RadioGroup>

    </LinearLayout>
</layout>
