<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewmodel"
            type="com.example.coinswatchermvvm.ui.addsignal.AddEditSignalViewModel"/>
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.addsignal.AddEditSignalFragment">

        <TextView
            android:id="@+id/tvSymbol"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Hello"
            android:textSize="36sp"
            android:textStyle="bold|italic" />



        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/textView_usd_take_profit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/addEditSignalFragment_usd_take_profit" />

                <EditText
                    android:layout_width="200sp"
                    android:layout_height="wrap_content"
                    android:id="@+id/editText_usd_take_profit"
                    android:text=""
                    android:inputType="numberDecimal"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/textView_usd_stop_loss"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/addEditSignalFragment_usd_stop_loss_profit" />

                <EditText
                    android:layout_width="200sp"
                    android:layout_height="wrap_content"
                    android:id="@+id/editText_usd_stop_loss"
                    android:text=""
                    android:inputType="numberDecimal"/>
            </TableRow>


            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/textView_btc_take_profit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/addEditSignalFragment_btc_take_profit" />

                <EditText
                    android:layout_width="200sp"
                    android:layout_height="wrap_content"
                    android:id="@+id/editText_btc_take_profit"
                    android:text=""
                    android:inputType="numberDecimal"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/textView_btc_stop_loss"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/addEditSignalFragment_btc_stop_loss_profit" />

                <EditText
                    android:layout_width="200sp"
                    android:layout_height="wrap_content"
                    android:id="@+id/editText_btc_stop_loss"
                    android:text=""
                    android:inputType="numberDecimal"/>
            </TableRow>
        </TableLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_save_signal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:onClick="@{() -> viewmodel.onSaveSignal()}"
                android:text="@string/addEditSignalFragment_button_save" />

            <Button
                android:id="@+id/button_remove_signal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/addEditSignalFragment_button_remove" />
        </LinearLayout>


        <TextView
            android:id="@+id/textView_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:visibility="invisible"
            android:text="@string/addEditSignalFragment_text_info" />
    </LinearLayout>
</layout>
